==> firemark/gen-painter/epd.c <==
#include "epd.h"
#include <avr/io.h>
#include <avr/pgmspace.h>
#include <util/delay.h>
#define EPD_VERSION 1

uint8_t EPD_12in48B_Init(void) {
  PORTD |= (1 << P_CS_S1) | (1 << P_CS_S2) | (1 << P_CS_M1) | (1 << P_CS_M2) |
           (1 << P_DC_1) | (1 << P_DC_2);
  EPD_Reset();

#if EPD_VERSION == 1
  // panel setting
  EPD_M1_SendCommand(0x00);
  EPD_M1_SendData(0x2f); // KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  EPD_S1_SendCommand(0x00);
  EPD_S1_SendData(0x2f);
  EPD_M2_SendCommand(0x00);
  EPD_M2_SendData(0x23);
  EPD_S2_SendCommand(0x00);
  EPD_S2_SendData(0x23);

  // POWER SETTING
  EPD_M1_SendCommand(0x01);
  EPD_M1_SendData(0x07);
  EPD_M1_SendData(0x17); // VGH=20V,VGL=-20V
  EPD_M1_SendData(0x3F); // VDH=15V
  EPD_M1_SendData(0x3F); // VDL=-15V
  EPD_M1_SendData(0x0d);
  EPD_M2_SendCommand(0x01);
  EPD_M2_SendData(0x07);
  EPD_M2_SendData(0x17); // VGH=20V,VGL=-20V
  EPD_M2_SendData(0x3F); // VDH=15V
  EPD_M2_SendData(0x3F); // VDL=-15V
  EPD_M2_SendData(0x0d);

  // booster soft start
  EPD_M1_SendCommand(0x06);
  EPD_M1_SendData(0x17); // A
  EPD_M1_SendData(0x17); // B
  EPD_M1_SendData(0x39); // C
  EPD_M1_SendData(0x17);
  EPD_M2_SendCommand(0x06);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x39);
  EPD_M2_SendData(0x17);

  // resolution setting
  EPD_M1_SendCommand(0x61);
  EPD_M1_SendData(0x02);
  EPD_M1_SendData(0x88); // source 648
  EPD_M1_SendData(0x01); // gate 492
  EPD_M1_SendData(0xEC);
  EPD_S1_SendCommand(0x61);
  EPD_S1_SendData(0x02);
  EPD_S1_SendData(0x90); // source 656
  EPD_S1_SendData(0x01); // gate 492
  EPD_S1_SendData(0xEC);
  EPD_M2_SendCommand(0x61);
  EPD_M2_SendData(0x02);
  EPD_M2_SendData(0x90); // source 656
  EPD_M2_SendData(0x01); // gate 492
  EPD_M2_SendData(0xEC);
  EPD_S2_SendCommand(0x61);
  EPD_S2_SendData(0x02);
  EPD_S2_SendData(0x88); // source 648
  EPD_S2_SendData(0x01); // gate 492
  EPD_S2_SendData(0xEC);

  EPD_M1S1M2S2_SendCommand(0x15); // DUSPI
  EPD_M1S1M2S2_SendData(0x20);

  EPD_M1S1M2S2_SendCommand(0x30); // PLL
  EPD_M1S1M2S2_SendData(0x08);

  EPD_M1S1M2S2_SendCommand(0x50); // Vcom and data interval setting
  EPD_M1S1M2S2_SendData(0x31);
  EPD_M1S1M2S2_SendData(0x07);

  EPD_M1S1M2S2_SendCommand(0x60); // TCON
  EPD_M1S1M2S2_SendData(0x22);

  EPD_M1_SendCommand(0xE0); // POWER SETTING
  EPD_M1_SendData(0x01);
  EPD_M2_SendCommand(0xE0); // POWER SETTING
  EPD_M2_SendData(0x01);

  EPD_M1S1M2S2_SendCommand(0xE3);
  EPD_M1S1M2S2_SendData(0x00);

  EPD_M1_SendCommand(0x82);
  EPD_M1_SendData(0x1c);
  EPD_M2_SendCommand(0x82);
  EPD_M2_SendData(0x1c);

  EPD_SetLut();
  // EPD_M1_ReadTemperature();
#elif EPD_VERSION == 2
  // panel setting for Clear
  // EPD_M1_SendCommand(0x00);
  // EPD_M1_SendData(0x07);	//KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  // EPD_S1_SendCommand(0x00);
  // EPD_S1_SendData(0x07);
  // EPD_M2_SendCommand(0x00);
  // EPD_M2_SendData(0x07);
  // EPD_S2_SendCommand(0x00);
  // EPD_S2_SendData(0x07);

  // panel setting for Display
  EPD_M1_SendCommand(0x00);
  EPD_M1_SendData(0x0f); // KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  EPD_S1_SendCommand(0x00);
  EPD_S1_SendData(0x0f);
  EPD_M2_SendCommand(0x00);
  EPD_M2_SendData(0x03);
  EPD_S2_SendCommand(0x00);
  EPD_S2_SendData(0x03);

  // booster soft start
  EPD_M1_SendCommand(0x06);
  EPD_M1_SendData(0x17); // A
  EPD_M1_SendData(0x17); // B
  EPD_M1_SendData(0x39); // C
  EPD_M1_SendData(0x17);
  EPD_M2_SendCommand(0x06);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x39);
  EPD_M2_SendData(0x17);

  // resolution setting
  EPD_M1_SendCommand(0x61);
  EPD_M1_SendData(0x02);
  EPD_M1_SendData(0x88); // source 648
  EPD_M1_SendData(0x01); // gate 492
  EPD_M1_SendData(0xEC);
  EPD_S1_SendCommand(0x61);
  EPD_S1_SendData(0x02);
  EPD_S1_SendData(0x90); // source 656
  EPD_S1_SendData(0x01); // gate 492
  EPD_S1_SendData(0xEC);
  EPD_M2_SendCommand(0x61);
  EPD_M2_SendData(0x02);
  EPD_M2_SendData(0x90); // source 656
  EPD_M2_SendData(0x01); // gate 492
  EPD_M2_SendData(0xEC);
  EPD_S2_SendCommand(0x61);
  EPD_S2_SendData(0x02);
  EPD_S2_SendData(0x88); // source 648
  EPD_S2_SendData(0x01); // gate 492
  EPD_S2_SendData(0xEC);

  EPD_M1S1M2S2_SendCommand(0x15); // DUSPI
  EPD_M1S1M2S2_SendData(0x20);

  EPD_M1S1M2S2_SendCommand(0x50); // Vcom and data interval setting
  EPD_M1S1M2S2_SendData(0x11);
  EPD_M1S1M2S2_SendData(0x07);

  EPD_M1S1M2S2_SendCommand(0x60); // TCON
  EPD_M1S1M2S2_SendData(0x22);

  EPD_M1S1M2S2_SendCommand(0xE3);
  EPD_M1S1M2S2_SendData(0x00);

//   EPD_M1_ReadTemperature();
#else
#error Wrong version choice.
#endif
  return 0;
}

static void EPD_Reset(void) {
  PORTD |= (1 << P_RST_1) | (1 << P_RST_2);
  _delay_ms(200);
  PORTD &= ~((1 << P_RST_1) | (1 << P_RST_2));
  _delay_ms(10);
  PORTD |= (1 << P_RST_1) | (1 << P_RST_2);
  _delay_ms(200);
}

static void EPD_M1_SendCommand(uint8_t Reg) { SEND_CMD(Reg, P_CS_M1, P_DC_1); }

static void EPD_M1_SendData(uint8_t Data) { SEND_DATA(Data, P_CS_M1, P_DC_1); }

static void EPD_S1_SendCommand(uint8_t Reg) { SEND_CMD(Reg, P_CS_S1, P_DC_1); }

static void EPD_S1_SendData(uint8_t Data) { SEND_DATA(Data, P_CS_S1, P_DC_1); }

static void EPD_M2_SendCommand(uint8_t Reg) { SEND_CMD(Reg, P_CS_M2, P_DC_2); }

static void EPD_M2_SendData(uint8_t Data) { SEND_DATA(Data, P_CS_M2, P_DC_2); }

static void EPD_S2_SendCommand(uint8_t Reg) { SEND_CMD(Reg, P_CS_S2, P_DC_2); }

static void EPD_S2_SendData(uint8_t Data) { SEND_DATA(Data, P_CS_S2, P_DC_2); }

static void EPD_M1M2_SendCommand(uint8_t Reg) {
  PORTD &= ~((1 << P_CS_M1) | (1 << P_CS_M2) | (1 << P_DC_1) | (1 << P_DC_2));
  SPI_WRITE(Reg);
  PORTD |= (1 << P_CS_M1) | (1 << P_CS_M2) | (1 << P_DC_1) | (1 << P_DC_2);
}

static void EPD_M1M2_SendData(uint8_t Data) {
  PORTD &= ~((1 << P_CS_M1) | (1 << P_CS_M2));
  PORTD |= (1 << P_DC_1) | (1 << P_DC_2);
  SPI_WRITE(Data);
  PORTD |= (1 << P_CS_M1) | (1 << P_CS_M2);
}

static void EPD_M1S1M2S2_SendCommand(uint8_t Reg) {
  PORTD &= ~((1 << P_CS_S1) | (1 << P_CS_S2) | (1 << P_CS_M1) | (1 << P_CS_M2) |
             (1 << P_DC_1) | (1 << P_DC_2));
  SPI_WRITE(Reg);
  PORTD |= (1 << P_CS_S1) | (1 << P_CS_S2) | (1 << P_CS_M1) | (1 << P_CS_M2) |
           (1 << P_DC_1) | (1 << P_DC_2);
}

static void EPD_M1S1M2S2_SendData(uint8_t Data) {
  PORTD &= ~((1 << P_CS_S1) | (1 << P_CS_S2) | (1 << P_CS_M1) | (1 << P_CS_M2));
  PORTD |= (1 << P_DC_1) | (1 << P_DC_2);
  SPI_WRITE(Data);
  PORTD |= (1 << P_CS_S1) | (1 << P_CS_S2) | (1 << P_CS_M1) | (1 << P_CS_M2);
}

static void EPD_M1_ReadBusy(void) {
  uint8_t busy;
  do {
    EPD_M1_SendCommand(0x71);
    busy = !(PINC & (1 << P_BUSY_M1));
  } while (busy);
  _delay_ms(200);
}

static void EPD_M2_ReadBusy(void) {
  uint8_t busy;
  do {
    EPD_M2_SendCommand(0x71);
    busy = !(PINC & (1 << P_BUSY_M2));
  } while (busy);
  _delay_ms(200);
}

static void EPD_S1_ReadBusy(void) {
  uint8_t busy;
  do {
    EPD_S1_SendCommand(0x71);
    busy = !(PINC & (1 << P_BUSY_S1));
  } while (busy);
  _delay_ms(200);
}

static void EPD_S2_ReadBusy(void) {
  uint8_t busy;
  do {
    EPD_S2_SendCommand(0x71);
    busy = !(PINC & (1 << P_BUSY_S2));
  } while (busy);
  _delay_ms(200);
}
