==> firemark/gen-painter/esp/main/src/esp32/epd.c <==
#include "esp32/epd.h"
#include <rom/ets_sys.h>
#include "driver/gpio.h"
#define EPD_VERSION 1
#define _DC(x) (1ULL << x)
#define _delay_us(x) ets_delay_us(x)
#define _delay_ms(x) ets_delay_us(1000 * (x))

uint8_t EPD_12in48B_Init(void) {
  gpio_config_t output_config = {
      .intr_type = GPIO_INTR_DISABLE,
      .mode = GPIO_MODE_OUTPUT,
      .pin_bit_mask = _DC(EPD_SCK_PIN) | _DC(EPD_MOSI_PIN) |        //
                      _DC(EPD_M1_CS_PIN) | _DC(EPD_S1_CS_PIN) |     //
                      _DC(EPD_M2_CS_PIN) | _DC(EPD_S2_CS_PIN) |     //
                      _DC(EPD_M1S1_DC_PIN) | _DC(EPD_M2S2_DC_PIN) | //
                      _DC(EPD_M1S1_RST_PIN) | _DC(EPD_M2S2_RST_PIN),
      .pull_down_en = 0,
      .pull_up_en = 0,
  };
  gpio_config_t input_config = {
      .intr_type = GPIO_INTR_DISABLE,
      .mode = GPIO_MODE_INPUT,
      .pin_bit_mask = _DC(EPD_SCK_PIN) | _DC(EPD_MOSI_PIN) |        //
                      _DC(EPD_M1_CS_PIN) | _DC(EPD_S1_CS_PIN) |     //
                      _DC(EPD_M2_CS_PIN) | _DC(EPD_S2_CS_PIN) |     //
                      _DC(EPD_M1S1_DC_PIN) | _DC(EPD_M2S2_DC_PIN) | //
                      _DC(EPD_M1S1_RST_PIN) | _DC(EPD_M2S2_RST_PIN),
      .pull_down_en = 0,
      .pull_up_en = 1,
  };

  gpio_config(&output_config);
  gpio_config(&input_config);

  gpio_set_level(EPD_SCK_PIN, 1);
  gpio_set_level(EPD_MOSI_PIN, 1);
  gpio_set_level(EPD_M1_CS_PIN, 1);
  gpio_set_level(EPD_M2_CS_PIN, 1);
  gpio_set_level(EPD_S1_CS_PIN, 1);
  gpio_set_level(EPD_S2_CS_PIN, 1);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
  gpio_set_level(EPD_M1S1_RST_PIN, 1);
  gpio_set_level(EPD_M2S2_RST_PIN, 1);

  EPD_Reset();

#if EPD_VERSION == 1
  // panel setting
  EPD_M1_SendCommand(0x00);
  EPD_M1_SendData(0x2f); // KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  EPD_S1_SendCommand(0x00);
  EPD_S1_SendData(0x2f);
  EPD_M2_SendCommand(0x00);
  EPD_M2_SendData(0x23);
  EPD_S2_SendCommand(0x00);
  EPD_S2_SendData(0x23);

  // POWER SETTING
  EPD_M1_SendCommand(0x01);
  EPD_M1_SendData(0x07);
  EPD_M1_SendData(0x17); // VGH=20V,VGL=-20V
  EPD_M1_SendData(0x3F); // VDH=15V
  EPD_M1_SendData(0x3F); // VDL=-15V
  EPD_M1_SendData(0x0d);
  EPD_M2_SendCommand(0x01);
  EPD_M2_SendData(0x07);
  EPD_M2_SendData(0x17); // VGH=20V,VGL=-20V
  EPD_M2_SendData(0x3F); // VDH=15V
  EPD_M2_SendData(0x3F); // VDL=-15V
  EPD_M2_SendData(0x0d);

  // booster soft start
  EPD_M1_SendCommand(0x06);
  EPD_M1_SendData(0x17); // A
  EPD_M1_SendData(0x17); // B
  EPD_M1_SendData(0x39); // C
  EPD_M1_SendData(0x17);
  EPD_M2_SendCommand(0x06);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x39);
  EPD_M2_SendData(0x17);

  // resolution setting
  EPD_M1_SendCommand(0x61);
  EPD_M1_SendData(0x02);
  EPD_M1_SendData(0x88); // source 648
  EPD_M1_SendData(0x01); // gate 492
  EPD_M1_SendData(0xEC);
  EPD_S1_SendCommand(0x61);
  EPD_S1_SendData(0x02);
  EPD_S1_SendData(0x90); // source 656
  EPD_S1_SendData(0x01); // gate 492
  EPD_S1_SendData(0xEC);
  EPD_M2_SendCommand(0x61);
  EPD_M2_SendData(0x02);
  EPD_M2_SendData(0x90); // source 656
  EPD_M2_SendData(0x01); // gate 492
  EPD_M2_SendData(0xEC);
  EPD_S2_SendCommand(0x61);
  EPD_S2_SendData(0x02);
  EPD_S2_SendData(0x88); // source 648
  EPD_S2_SendData(0x01); // gate 492
  EPD_S2_SendData(0xEC);

  EPD_M1S1M2S2_SendCommand(0x15); // DUSPI
  EPD_M1S1M2S2_SendData(0x20);

  EPD_M1S1M2S2_SendCommand(0x30); // PLL
  EPD_M1S1M2S2_SendData(0x08);

  EPD_M1S1M2S2_SendCommand(0x50); // Vcom and data interval setting
  EPD_M1S1M2S2_SendData(0x31);
  EPD_M1S1M2S2_SendData(0x07);

  EPD_M1S1M2S2_SendCommand(0x60); // TCON
  EPD_M1S1M2S2_SendData(0x22);

  EPD_M1_SendCommand(0xE0); // POWER SETTING
  EPD_M1_SendData(0x01);
  EPD_M2_SendCommand(0xE0); // POWER SETTING
  EPD_M2_SendData(0x01);

  EPD_M1S1M2S2_SendCommand(0xE3);
  EPD_M1S1M2S2_SendData(0x00);

  EPD_M1_SendCommand(0x82);
  EPD_M1_SendData(0x1c);
  EPD_M2_SendCommand(0x82);
  EPD_M2_SendData(0x1c);

  EPD_SetLut();
  // EPD_M1_ReadTemperature();
#elif EPD_VERSION == 2
  // panel setting for Clear
  // EPD_M1_SendCommand(0x00);
  // EPD_M1_SendData(0x07);	//KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  // EPD_S1_SendCommand(0x00);
  // EPD_S1_SendData(0x07);
  // EPD_M2_SendCommand(0x00);
  // EPD_M2_SendData(0x07);
  // EPD_S2_SendCommand(0x00);
  // EPD_S2_SendData(0x07);

  // panel setting for Display
  EPD_M1_SendCommand(0x00);
  EPD_M1_SendData(0x0f); // KW-3f   KWR-2F	BWROTP 0f	BWOTP 1f
  EPD_S1_SendCommand(0x00);
  EPD_S1_SendData(0x0f);
  EPD_M2_SendCommand(0x00);
  EPD_M2_SendData(0x03);
  EPD_S2_SendCommand(0x00);
  EPD_S2_SendData(0x03);

  // booster soft start
  EPD_M1_SendCommand(0x06);
  EPD_M1_SendData(0x17); // A
  EPD_M1_SendData(0x17); // B
  EPD_M1_SendData(0x39); // C
  EPD_M1_SendData(0x17);
  EPD_M2_SendCommand(0x06);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x17);
  EPD_M2_SendData(0x39);
  EPD_M2_SendData(0x17);

  // resolution setting
  EPD_M1_SendCommand(0x61);
  EPD_M1_SendData(0x02);
  EPD_M1_SendData(0x88); // source 648
  EPD_M1_SendData(0x01); // gate 492
  EPD_M1_SendData(0xEC);
  EPD_S1_SendCommand(0x61);
  EPD_S1_SendData(0x02);
  EPD_S1_SendData(0x90); // source 656
  EPD_S1_SendData(0x01); // gate 492
  EPD_S1_SendData(0xEC);
  EPD_M2_SendCommand(0x61);
  EPD_M2_SendData(0x02);
  EPD_M2_SendData(0x90); // source 656
  EPD_M2_SendData(0x01); // gate 492
  EPD_M2_SendData(0xEC);
  EPD_S2_SendCommand(0x61);
  EPD_S2_SendData(0x02);
  EPD_S2_SendData(0x88); // source 648
  EPD_S2_SendData(0x01); // gate 492
  EPD_S2_SendData(0xEC);

  EPD_M1S1M2S2_SendCommand(0x15); // DUSPI
  EPD_M1S1M2S2_SendData(0x20);

  EPD_M1S1M2S2_SendCommand(0x50); // Vcom and data interval setting
  EPD_M1S1M2S2_SendData(0x11);
  EPD_M1S1M2S2_SendData(0x07);

  EPD_M1S1M2S2_SendCommand(0x60); // TCON
  EPD_M1S1M2S2_SendData(0x22);

  EPD_M1S1M2S2_SendCommand(0xE3);
  EPD_M1S1M2S2_SendData(0x00);

//   EPD_M1_ReadTemperature();
#else
#error Wrong version choice.
#endif
  return 0;
}

static void EPD_Reset(void) {
  gpio_set_level(EPD_M1S1_RST_PIN, 1);
  gpio_set_level(EPD_M2S2_RST_PIN, 1);
  _delay_ms(200);
  gpio_set_level(EPD_M1S1_RST_PIN, 0);
  gpio_set_level(EPD_M2S2_RST_PIN, 0);
  _delay_ms(10);
  gpio_set_level(EPD_M1S1_RST_PIN, 1);
  gpio_set_level(EPD_M2S2_RST_PIN, 1);
  _delay_ms(200);
}

void EPD_M1_SendCommand(uint8_t Reg) {
  SEND_CMD(Reg, EPD_M1_CS_PIN, EPD_M1S1_DC_PIN);
}

void EPD_M1_SendData(uint8_t Data) {
  SEND_DATA(Data, EPD_M1_CS_PIN, EPD_M1S1_DC_PIN);
}

void EPD_S1_SendCommand(uint8_t Reg) {
  SEND_CMD(Reg, EPD_S1_CS_PIN, EPD_M1S1_DC_PIN);
}

void EPD_S1_SendData(uint8_t Data) {
  SEND_DATA(Data, EPD_S1_CS_PIN, EPD_M1S1_DC_PIN);
}

void EPD_M2_SendCommand(uint8_t Reg) {
  SEND_CMD(Reg, EPD_M2_CS_PIN, EPD_M2S2_DC_PIN);
}

void EPD_M2_SendData(uint8_t Data) {
  SEND_DATA(Data, EPD_M2_CS_PIN, EPD_M2S2_DC_PIN);
}

void EPD_S2_SendCommand(uint8_t Reg) {
  SEND_CMD(Reg, EPD_S2_CS_PIN, EPD_M2S2_DC_PIN);
}

void EPD_S2_SendData(uint8_t Data) {
  SEND_DATA(Data, EPD_S2_CS_PIN, EPD_M2S2_DC_PIN);
}

static void EPD_M1M2_SendCommand(uint8_t Reg) {
  gpio_set_level(EPD_M1_CS_PIN, 0);
  gpio_set_level(EPD_M2_CS_PIN, 0);
  gpio_set_level(EPD_M1S1_DC_PIN, 0);
  gpio_set_level(EPD_M2S2_DC_PIN, 0);
  spi_write(Reg);
  gpio_set_level(EPD_M1_CS_PIN, 1);
  gpio_set_level(EPD_M2_CS_PIN, 1);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
}

static void EPD_M1M2_SendData(uint8_t Data) {
  gpio_set_level(EPD_M1_CS_PIN, 0);
  gpio_set_level(EPD_M2_CS_PIN, 0);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
  spi_write(Data);
  gpio_set_level(EPD_M1_CS_PIN, 1);
  gpio_set_level(EPD_M2_CS_PIN, 1);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
}

static void EPD_M1S1M2S2_SendCommand(uint8_t Reg) {
  gpio_set_level(EPD_M1_CS_PIN, 0);
  gpio_set_level(EPD_M2_CS_PIN, 0);
  gpio_set_level(EPD_S1_CS_PIN, 0);
  gpio_set_level(EPD_S2_CS_PIN, 0);
  gpio_set_level(EPD_M1S1_DC_PIN, 0);
  gpio_set_level(EPD_M2S2_DC_PIN, 0);
  spi_write(Reg);
  gpio_set_level(EPD_M1_CS_PIN, 1);
  gpio_set_level(EPD_M2_CS_PIN, 1);
  gpio_set_level(EPD_S1_CS_PIN, 1);
  gpio_set_level(EPD_S2_CS_PIN, 1);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
}

static void EPD_M1S1M2S2_SendData(uint8_t Data) {
  gpio_set_level(EPD_M1_CS_PIN, 0);
  gpio_set_level(EPD_M2_CS_PIN, 0);
  gpio_set_level(EPD_S1_CS_PIN, 0);
  gpio_set_level(EPD_S2_CS_PIN, 0);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
  spi_write(Data);
  gpio_set_level(EPD_M1_CS_PIN, 1);
  gpio_set_level(EPD_M2_CS_PIN, 1);
  gpio_set_level(EPD_S1_CS_PIN, 1);
  gpio_set_level(EPD_S2_CS_PIN, 1);
  gpio_set_level(EPD_M1S1_DC_PIN, 1);
  gpio_set_level(EPD_M2S2_DC_PIN, 1);
}

static void EPD_M1_ReadBusy(void) {
  do {
    EPD_M1_SendCommand(0x71);
  } while (!gpio_get_level(EPD_M1_BUSY_PIN));
  _delay_ms(200);
}

static void EPD_M2_ReadBusy(void) {
  do {
    EPD_M2_SendCommand(0x71);
  } while (!gpio_get_level(EPD_M2_BUSY_PIN));
  _delay_ms(200);
}

static void EPD_S1_ReadBusy(void) {
  do {
    EPD_S1_SendCommand(0x71);
  } while (!gpio_get_level(EPD_S1_BUSY_PIN));
  _delay_ms(200);
}

static void EPD_S2_ReadBusy(void) {
  do {
    EPD_S2_SendCommand(0x71);
  } while (!gpio_get_level(EPD_S2_BUSY_PIN));
  _delay_ms(200);
}
